[gd_scene load_steps=36 format=3 uid="uid://d2g4ntl6i5xd"]

[ext_resource type="Script" uid="uid://6wv0wrqmc8nu" path="res://player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://cyi6u2hoea5fv" path="res://arrow.tscn" id="2_onrkg"]

[sub_resource type="SphereMesh" id="SphereMesh_sh265"]

[sub_resource type="Animation" id="Animation_4flbx"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3.8147e-06, -186), Vector2(-3.8147e-06, -181)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LegL:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-1, -82, -6, -45, -22, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LegR:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -82, 16, -44, 20, -5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/ArmL:points")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-1, -150, -14, -114, -11, -88), PackedVector2Array(-1, -150, -12, -117, -8, -88)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/ArmR:points")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(1, -177, 13, -136, 23, -113), PackedVector2Array(1, -177, 11, -138, 23, -114)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Torso:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -191.917, 0, -80)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/ArmR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 33)]
}

[sub_resource type="Animation" id="Animation_onrkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/LegL:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-1, -82, -6, -45, -22, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LegR:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -82, 16, -44, 20, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/ArmL:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-1, -150, -14, -114, -11, -88)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/ArmR:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(1, -177, 13, -136, 23, -113)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Torso:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -191.917, 0, -80)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3.8147e-06, -181)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/ArmR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 33)]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/LegL:points")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-1, -82, -10, -40, -38, -6), PackedVector2Array(-1, -82, 8.5, -44.5, -14, -17), PackedVector2Array(-1, -82, 27, -49, 39, -7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LegR:points")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [PackedVector2Array(0, -82, 24, -47, 33, -5), PackedVector2Array(0, -82, -13, -40, -42, -5), PackedVector2Array(0, -82, 11, -48, -14, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/ArmR:points")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(1, -177, 14, -140, 35, -123), PackedVector2Array(-2, -177, -24, -147, -9, -114)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/ArmL:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-1, -150, -22, -119, -9, -93), PackedVector2Array(-1, -150, 12, -119, 39, -101)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3.8147e-06, -186), Vector2(-4, -185)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Torso:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -191.917, 0, -80)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/ArmR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 33)]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-26, -181)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/ArmL:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-15, -150, -33, -123, -21, -103)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/ArmR:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(12, -180, 30, -157, 54, -150)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Torso:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-18, -190.531, -1, -83.8542)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LegL:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -81, 28, -57, 43, -12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/LegR:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-1, -82, 4, -35, 7, -6)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/ArmR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-26, 35)]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/LegR:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -82, 24, -42, 9, -7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LegL:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-1, -82, -19, -40, -38, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Torso:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(13, -191.917, 0, -80)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, -182)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/ArmL:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(9, -144, -19, -129, -8, -102)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/ArmR:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(12, -174, 23, -140, 50, -142)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/ArmR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 33)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqtel"]
_data = {
&"Idle": SubResource("Animation_4flbx"),
&"RESET": SubResource("Animation_onrkg"),
&"Run": SubResource("Animation_i3pqv"),
&"fall": SubResource("Animation_sweqy"),
&"jump": SubResource("Animation_hqtel")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sweqy"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hs0m"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1jxqw"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dw050"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dw050"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "direction"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b26j0"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "!direction"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4flbx"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7ghd"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "velocity.y<0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nvl01"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "velocity.y<0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ivps1"]
xfade_time = 0.2
advance_mode = 2
advance_expression = "velocity.y>0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urp6f"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "velocity.y>0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bwjto"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "velocity.y>0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_606se"]
xfade_time = 0.2
advance_mode = 2
advance_expression = "velocity.y<0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u1c27"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "velocity.y==0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sweqy"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "velocity.y==0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_n7ghd"]
states/Idle/node = SubResource("AnimationNodeAnimation_sweqy")
states/Idle/position = Vector2(342.801, 75.4024)
states/Run/node = SubResource("AnimationNodeAnimation_2hs0m")
states/Run/position = Vector2(503.601, 89.3984)
states/Start/position = Vector2(230.402, 89.3984)
states/fall/node = SubResource("AnimationNodeAnimation_1jxqw")
states/fall/position = Vector2(571, 182.199)
states/jump/node = SubResource("AnimationNodeAnimation_dw050")
states/jump/position = Vector2(537.199, -5.40628)
transitions = ["Idle", "Run", SubResource("AnimationNodeStateMachineTransition_dw050"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_b26j0"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4flbx"), "Idle", "jump", SubResource("AnimationNodeStateMachineTransition_n7ghd"), "Run", "jump", SubResource("AnimationNodeStateMachineTransition_nvl01"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_ivps1"), "Run", "fall", SubResource("AnimationNodeStateMachineTransition_urp6f"), "Idle", "fall", SubResource("AnimationNodeStateMachineTransition_bwjto"), "fall", "jump", SubResource("AnimationNodeStateMachineTransition_606se"), "fall", "Idle", SubResource("AnimationNodeStateMachineTransition_u1c27"), "jump", "Idle", SubResource("AnimationNodeStateMachineTransition_sweqy")]
graph_offset = Vector2(-206.278, -102.195)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b26j0"]
animation = &"Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4flbx"]
animation = &"Right"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_onrkg"]
xfade_time = 0.1
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i3pqv"]
xfade_time = 0.2
advance_mode = 2
advance_expression = "direction<0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hqtel"]
xfade_time = 0.2
advance_mode = 2
advance_expression = "direction>0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pbfsw"]
states/End/position = Vector2(900.801, 100)
states/Left/node = SubResource("AnimationNodeAnimation_b26j0")
states/Left/position = Vector2(293.598, 175.996)
states/Right/node = SubResource("AnimationNodeAnimation_4flbx")
states/Right/position = Vector2(303.195, 92.5977)
transitions = ["Start", "Right", SubResource("AnimationNodeStateMachineTransition_onrkg"), "Right", "Left", SubResource("AnimationNodeStateMachineTransition_i3pqv"), "Left", "Right", SubResource("AnimationNodeStateMachineTransition_hqtel")]

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dw050"]
_data = {
&"Left": SubResource("Animation_2hs0m"),
&"Right": SubResource("Animation_1jxqw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4flbx"]
size = Vector2(43, 197)

[node name="Player" type="CharacterBody2D"]
modulate = Color(1, 0.35, 0.35, 1)
floor_stop_on_slope = false
script = ExtResource("1_4flbx")

[node name="Body" type="Node2D" parent="."]

[node name="Torso" type="Line2D" parent="Body"]
position = Vector2(0, -19.4737)
scale = Vector2(1, 0.721804)
points = PackedVector2Array(0, -191.917, 0, -80)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="ArmR" type="Line2D" parent="Body"]
position = Vector2(-1, 33)
points = PackedVector2Array(1, -177, 13, -136, 23, -113)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="ArmL" type="Line2D" parent="Body"]
position = Vector2(-2, 4)
points = PackedVector2Array(-1, -150, -14, -114, -11, -88)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LegR" type="Line2D" parent="Body"]
points = PackedVector2Array(0, -82, 16, -44, 20, -5)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LegL" type="Line2D" parent="Body"]
points = PackedVector2Array(-1, -82, -6, -45, -22, -6)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12
antialiased = true

[node name="Head" type="MeshInstance2D" parent="Body"]
position = Vector2(-3.8147e-06, -181)
scale = Vector2(33.5374, 33.5374)
mesh = SubResource("SphereMesh_sh265")

[node name="MovementPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqtel")
}

[node name="MovementTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_n7ghd")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../MovementPlayer")

[node name="DirectionTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_pbfsw")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../DirectionPlayer")

[node name="DirectionPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dw050")
}

[node name="LeftArrow" parent="." instance=ExtResource("2_onrkg")]
position = Vector2(-64, -256)
rotation = 3.14159
scale = Vector2(0.5, 0.5)

[node name="RightArrow" parent="." instance=ExtResource("2_onrkg")]
position = Vector2(64, -224)
scale = Vector2(0.5, 0.5)

[node name="UpArrow" parent="." instance=ExtResource("2_onrkg")]
position = Vector2(16, -256)
rotation = -1.5708
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.5, -99.5)
shape = SubResource("RectangleShape2D_4flbx")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(2.5, -99.5)
shape = SubResource("RectangleShape2D_4flbx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
